# trajectory-optimisation-in-learned-multimodal-dynamical-systems

./: .gitignore  README.md  README.org  TODOs.org  pyproject.toml  requirements.txt  setup.py
BMNSVGP/: derivative_kernel.py  derivative_kernel_gpy.py  gen_data.py  geodesic_func.py  geodesic_func_jac_and_val.py  geodesic_solver.py  geodesic_solver_sparse.py  likelihood.py  model.py  ode_geodesic.py  plot_model.py  probabilistic_geodesic.py  probabilistic_metric.py  save_params.py  save_params_from_fake_sparse.py  shooting_method_scipy.py  solve_bvp_scipy.py  sparse_probabilistic_geodesic.py  sparse_probabilistic_metric.py  test_riemannian_metric.py  trainer.py  utils.py  value_and_jac.py
BMNSVGP/saved_models/: fake_alpha  fake_alpha_for_opt  lengthscales.npz  params.npz  variance.npz
BMNSVGP/utils/: gen_data.py  gen_data_2d.py  metric_utils.py  utils.py  visualise_alpha.py  visualise_metric.py  visualise_metric_sparse.py
ProbGeo/: collocation.py  conditionals.py  covariances.py  derivative_kernel_gpy.py  geodesic_solver_class.py  geodesic_solver_real.py  geodesic_solver_sparse.py  geodesic_solver_sparseold.py  gp.py  kernels.py  likelihood.py  metric_tensor.py  model.py  mogpe.py  ode.py  plot_model.py  probabilistic_geodesic_solver.py  probabilistic_metric.py  probabilistic_metric_generic.py  probabilistic_metric_tensor.py  shooting_method_scipy_sparse.py  solvers.py  sparse_metric_tensor.py  sparse_probabilistic_geodesic.py  sparse_probabilistic_metric.py  svgp.py  test.py  trainer.py  typing.py
ProbGeo/data/: gen_and_save_artificial_data_2d.py  gen_geodesic_data.py  train_and_save_svgp_gpflow.py
ProbGeo/gp/: __init__.py  conditionals.py  gp.py  utils.py
ProbGeo/solvers/shooting-methods/: geodesic_solver.py  geodesic_solver_class.py  probabilistic_geodesic.py
ProbGeo/utils/: gp.py  metric_utils.py  save_params_from_fake.py  save_params_from_model.py  sparse_gp_helpers.py  utils.py  value_and_jac.py  visualise_metric.py  visualise_metric_sparse.py
ProbGeo/visualisation/: gp.py  utils.py
data/: README.md  README.org  parse_csv.py  process-data-dynamic.py
data/12-nov/: 5x5-cream-startp1-nov12.csv  5x5-cream-startp2-nov12.csv  5x5-cream-startp3-nov12.csv  5x5-cream-startp4-nov12.csv  7x7-cream-startp1-nov12.csv  7x7-cream-startp2-nov12.csv  7x7-cream-startp3-nov12.csv  7x7-cream-startp4-nov12.csv  traj.csv
data/25-nov2/: parse_csv.py  process-data-dynamic.py
data/26-nov/: process-data-dynamic.py
data/csv-files/: 1-aidan-clean.csv  1-aidan.csv  aidan-sheet-cream-1.csv  aidan-sheet-cream-2.csv  traj-2 (Copy 1).csv  traj.csv
data/csv/25nov/1/: 7x7-cream-startp1-nov25.csv  7x7-cream-startp2-nov25.csv  7x7-cream-startp3-nov25.csv  7x7-cream-startp4-nov25.csv  traj.csv  traj2.csv
data/csv/25nov/2/: 2-7x7-cream-startp1-nov25.csv  2-7x7-cream-startp2-nov25.csv  2-7x7-cream-startp3-nov25.csv  2-7x7-cream-startp4-nov25.csv  traj.csv  traj2.csv
data/csv/25nov/3/: 3-7x7-cream-startp1-nov25.csv  (+5 more)
data/npz/turbulence/: model_data.npz  model_data_fan_fixed.npz
data/processed/: artificial_data.npz  artificial_data_2d.npz
data/scripts/: concat_model_inputs.py  parse_csv.py  process_cl_data.py  process_cl_data_turbulence.py  process_data_dynamic.py  visualise_data.py  visualise_data_turbulence.py
docs/: README.md  conf.py  index.rst
docs/source/: conf.py  gen_data.rst  index.rst  likelihood.rst  modules.rst
examples/artificial/: #train_and_save_svgp_gpflow.py#  generate_artificial_2d_data.py  run_collocation.py  run_collocation.py~  train_and_save_svgp.py~  train_and_save_svgp_gpflow.py  train_and_save_svgp_gpflow.py~
examples/artificial/data/: artificial_data_2d.npz
examples/artificial/saved_gp_models/: params_fake_sparse_26-08.npz
examples/quadcopter/: icra_trajectory_optimisation_quadcopter.ipynb  run_collocation.py  run_collocation_with_tf_model.py  test_collocation.py
examples/quadcopter-sim/scenario-1/: plot_jacobian.py  plot_metric.py  run_collocation_with_tf_model.py  run_unconstrained_traj_opt.py  simulate_optimised_trajectory.py
examples/quadcopter/trained-mogpe-params/: 09-08-144846-param_dict.pickle  icra_param_dict.npz  icra_param_dict.pickle  params_from_model.npz
notebooks/: bi-modal-noise-svgp.ipynb  bimodal-noise-var-gp.ipynb  bmsmgp.ipynb  motivation.ipynb
tests/: test_collocation.py  test_manifold.py  test_ode.py  test_solver.py
tromp/: collocation.py  constraints.py  helpers.py  manifold.py  metric_tensor.py  metric_tensors.py  mogpe.py  ode.py  solvers.py  trajectories.py
tromp/plotting/: gp.py  metric.py  solver.py  utils.py
tromp/visualisation/: gp.py  metric.py  plot_3d.py  plot_domain.py  plot_results.py  plot_trajectories.py
(+65 files in other folders)
