[tool.poetry]
name = "tromp"
version = "0.1.0"
description = "Trajectory optimisation in learned multimodal dynamical systems via latent-space collocation - JAX."
authors = ["Aidan Scannell <scannell.aidan@gmail.com>"]

[tool.poetry.dependencies]
# dataclasses is built-in for python ^3.8 (but not earlier) and Poetry can't handle conditional dependencies in
# other packages (e.g. gpflow) so we set python ^3.8. Python 3.6 should work using pip...
python = "^3.8"
# python = ">=3.6,<3.10"  
# python = "^3.6"  
jax = "^0.2.5"
# jaxlib = "^0.1.56"
jaxlib = "^0.1.59"
# jax = "0.2.5"
# jaxlib = "0.1.56"
matplotlib = "^3.3.3"
tensorflow-probability = "^0.12.0"
# tensorflow-probability = "^0.9.0"
tensorflow = "^2.2.0"
scipy = "^1.4"
# scipy = "1.5.4"
# scipy = "1.4.1"
# gpflow = "2.0.5"
# gpflow = "2.0.5"
gpflow = "^2.1.0"
cloudpickle = "1.3.0"

mogpe = {path = "../mogpe", develop=true} # my Mixtures of GP Experts library
gpjax = {path = "../GPJax", develop=true} # my Jax GP library
simenvs = {path = "../sim-envs", develop=true} # my simulation environment library
# gpjax = {git = "https://github.com/aidanscannell/GPJax", brach = "master"} # my Jax GP library

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}
